@@ -1,5 +1,6 @@
 0.04
  - API CHANGE: Remove 'active' parameter from Data::Login::Role.
+ - API CHANGE: Parameter 'valid_from' is required in Data::Login::Role.
  - Update usage of Data::HashType to 0.05 version.
 
 0.03 2024-03-22T14:37:07+01:00
